# TradingDNA_3.0

./: .gitignore  check_db.py  check_exchanges.py  fix_signals_genes.py  log.txt  pyproject.toml  requirements.txt
Implementation/: 01_cli_framework_implementation.md  02_data_system_implementation.md  03_training_system_implementation.md  04_immune_system_implementation.md  05_operations_implementation.md  06_monitoring_implementation.md
Sviluppo/: cli_framework_plan.md  data_system_plan.md  detailed-file-descriptions.md  development_plan.md  dna_system_plan.md  getting-started-guide.md  immune_system_plan.md  monitoring_plan.md  next_steps.md  operations_plan.md  training_system_plan.md
cli/: __init__.py  main.py
cli/config/: __init__.py  config_loader.py  validators.py
cli/genes/: __init__.py  atr_gene.py  base.py  bollinger_gene.py  candlestick_gene.py  macd_gene.py  moving_average_gene.py  obv_gene.py  rsi_gene.py  stochastic_gene.py  volatility_breakout_gene.py  volume_gene.py
cli/logger/: __init__.py  formatters.py  log_manager.py
cli/menu/: __init__.py  download_manager.py  gene_manager.py  gene_manager_analytics.py  gene_manager_base.py  menu_core.py  menu_definitions.py  menu_items.py  menu_manager.py  menu_utils.py
cli/progress/: __init__.py  formatters.py  indicators.py
config/: config.yaml  cromo.yaml  gene.yaml  logging.yaml  networks.yaml  population.yaml  portfolio.yaml  security.yaml  system.yaml  test.yaml
data/: tradingdna.db-shm
data/collection/: __init__.py  downloader.py  (+3 more)
prompt/: Step_1  progress.md
tests/: __init__.py
(+57 files in other folders)
