[project]
name = "tradingdna-cli"
version = "0.1.0"
description = "Framework CLI per la gestione del sistema di trading TradingDNA"
authors = [
    {name = "TradingDNA Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.36",
    "click>=8.1.3",
    "colorama>=0.4.6",
    "pyyaml>=6.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]